Fix search-bar crosses first Stylist's card on iPhone X (#1256)
- Add a fix that uses media query to make a specific offset on iPhone X
- Hide scrollbar in stylists slider

JIRA issue: FRON-1291

--- a/mobile/client/src/app/stylists/stylists-search/stylists-search.component.scss
+++ b/mobile/client/src/app/stylists/stylists-search/stylists-search.component.scss
@@ -123,3 +123,18 @@ page-stylists-search {
     }
   }
 }
+
+// This is an iphoneX-only scroll-content offset fix.
+//
+// This solution is kind of a tricky one and can be considered only  as a rude temp fix.
+// If there are some more offset problems appear on other devices in future we should
+// do more detailed investigation.
+@media only screen and (min-device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+  page-stylists-search {
+    .StylistsPage {
+      .scroll-content {
+        transform: translateY(pxtovw(264px));
+      }
+    }
+  }
+}
